docs: add CHANGELOG and verify task 4 completion
- Verified backend structure matches requirements exactly
- Confirmed Python 3.13.7 running via uv
- All directories in place per structure.md
- Task 4 marked complete in tasks.md
- Initialized CHANGELOG.md with foundation stage progress
- Updated pre-commit config to scope Biome to frontend/src/

--- a/frontend/biome.json
+++ b/frontend/biome.json
@@ -1,6 +1,5 @@
 {
-  "$schema": "https://biomejs.dev/schemas/2.3.4/schema.json",
-  "root": true,
+  "$schema": "https://biomejs.dev/schemas/2.3.2/schema.json",
   "vcs": {
     "enabled": true,
     "clientKind": "git",
@@ -8,7 +7,7 @@
   },
   "files": {
     "ignoreUnknown": false,
-    "includes": ["frontend/src/**/*.{js,jsx}"]
+    "includes": ["src/**/*.{js,jsx}"]
   },
   "formatter": {
     "enabled": true,
