--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -26,6 +26,7 @@ repos:
     rev: v0.4.0
     hooks:
       - id: biome-ci
+        files: ^frontend/src/
 
   # General quality checks
   - repo: https://github.com/pre-commit/pre-commit-hooks
