chore: configure biome for frontend linting and formatting

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -26,7 +26,8 @@ repos:
     rev: v0.4.0
     hooks:
       - id: biome-ci
-        files: ^frontend/src/
+        args: [--config-path=frontend/biome.json]
+        files: ^frontend/
 
   # General quality checks
   - repo: https://github.com/pre-commit/pre-commit-hooks
