--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -15,3 +15,23 @@ build-backend = "hatchling.build"
 
 [tool.hatch.build.targets.wheel]
 packages = ["src"]
+
+[tool.ruff]
+line-length = 80
+target-version = "py313"
+
+[tool.ruff.lint]
+select = ["A", "ANN", "D", "DOC", "E", "F", "I", "N", "UP", "W"]
+ignore = ["A002", "ANN204", "ANN401", "D100", "D417"]
+
+[tool.ruff.lint.flake8-annotations]
+allow-star-arg-any = true
+mypy-init-return = true
+
+[tool.ruff.lint.pydocstyle]
+convention = "google"
+ignore-decorators = ["typing.overload"]
+
+[tool.ruff.lint.per-file-ignores]
+"**/{tests,docs,tools}/*" = ["ANN201", "D", "E402"]
+"__init__.py" = ["E402"]
