chore: configure mypy for type checking

--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -16,6 +16,12 @@ build-backend = "hatchling.build"
 [tool.hatch.build.targets.wheel]
 packages = ["src"]
 
+[tool.mypy]
+python_version = "3.13"
+warn_return_any = true
+check_untyped_defs = true
+ignore_missing_imports = true
+
 [tool.ruff]
 line-length = 80
 target-version = "py313"
