feat: initialize react project with vite
- Create package.json with React 18, Vite 5, React Router 6, Axios
- Configure Vite with @/ alias, build to ../build/, dev server proxy
- Create src/ directory structure (components, pages, hooks, services, context)
- Add index.html and minimal main.jsx entry point
- Move biome.json to root for monorepo configuration
- Update pre-commit config to use root biome.json
- Run biome migrate to update schema version
- Install 329 npm packages successfully
- Verify production build outputs to blog-code/build/

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -26,7 +26,7 @@ repos:
     rev: v0.4.0
     hooks:
       - id: biome-ci
-        args: [--config-path=frontend/biome.json]
+        args: [--config-path=biome.json]
         files: ^frontend/
 
   # General quality checks
