--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -1,34 +1,37 @@
 [project]
-name = "blog"
-version = "0.1.0"
-description = "Blog platform with Flask + React"
-requires-python = ">=3.13.5"
 authors = [{ name = "Blog Platform Team" }]
-dependencies = []
+dependencies = [
+    "pydantic>=2.12.4",
+    "pydantic-settings>=2.12.0",
+]
+description = "Blog platform with Flask + React"
+name = "blog"
+requires-python = ">=3.13.5"
+version = "0.1.0"
 
-[project.optional-dependencies]
-dev = []
+[dependency-groups]
+dev = ["pytest-cov>=7.0.0", "pytest>=9.0.0"]
 
 [build-system]
-requires = ["hatchling"]
 build-backend = "hatchling.build"
+requires = ["hatchling"]
 
 [tool.hatch.build.targets.wheel]
 packages = ["src"]
 
 [tool.mypy]
-python_version = "3.13"
-warn_return_any = true
 check_untyped_defs = true
 ignore_missing_imports = true
+python_version = "3.13"
+warn_return_any = true
 
 [tool.ruff]
 line-length = 80
 target-version = "py313"
 
 [tool.ruff.lint]
-select = ["A", "ANN", "D", "DOC", "E", "F", "I", "N", "UP", "W"]
 ignore = ["A002", "ANN204", "ANN401", "D100", "D417"]
+select = ["A", "ANN", "D", "DOC", "E", "F", "I", "N", "UP", "W"]
 
 [tool.ruff.lint.flake8-annotations]
 allow-star-arg-any = true
@@ -39,5 +42,11 @@ convention = "google"
 ignore-decorators = ["typing.overload"]
 
 [tool.ruff.lint.per-file-ignores]
-"**/{tests,docs,tools}/*" = ["ANN201", "D", "E402"]
+"**/{tests,docs,tools}/*" = ["ANN001", "ANN201", "D", "DOC", "E402"]
 "__init__.py" = ["E402"]
+
+[tool.pytest]
+minversion = "9.0"
+pythonpath = ["src"]
+testpaths = ["tests", "docs"]
+addopts = ["-rf", "--cov=.", "--cov-fail-under=80", "--cov-report=json"]
