--- a/.gitignore
+++ b/.gitignore
@@ -54,7 +54,7 @@ htmlcov/
 .coverage.*
 .cache
 nosetests.xml
-coverage.xml
+coverage.*
 *.cover
 *.py,cover
 .hypothesis/
@@ -436,4 +436,3 @@ sketch
 # End of https://www.toptal.com/developers/gitignore/api/visualstudiocode,python,flask,node,react,ssh
 
 # Generated using ignr.py - github.com/Antrikshy/ignr.py
-
