feat(db): implement SQLModel database connection management
- Add get_engine() function with lru_cache for singleton pattern
- Implement get_db() generator for dependency injection
- Configure PostgreSQL connection with pool_pre_ping
- Add psycopg2-binary dependency for PostgreSQL driver
- Create shared test fixtures in conftest.py
- Add integration tests for database connection

--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -1,6 +1,7 @@
 [project]
 authors = [{ name = "Blog Platform Team" }]
 dependencies = [
+    "psycopg2-binary>=2.9.11",
     "pydantic-settings>=2.12.0",
     "pydantic>=2.12.4",
     "sqlmodel>=0.0.27",
