--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -12,7 +12,11 @@ requires-python = ">=3.13.5"
 version = "0.1.0"
 
 [dependency-groups]
-dev = ["pytest-cov>=7.0.0", "pytest>=9.0.0"]
+dev = [
+    "mypy>=1.18.2",
+    "pytest-cov>=7.0.0",
+    "pytest>=9.0.0",
+]
 
 [build-system]
 build-backend = "hatchling.build"
@@ -23,9 +27,10 @@ packages = ["src"]
 
 [tool.mypy]
 check_untyped_defs = true
-ignore_missing_imports = true
+follow_imports = "silent"
 python_version = "3.13"
 warn_return_any = true
+mypy_path = "$MYPY_CONFIG_FILE_DIR/src"
 
 [tool.ruff]
 line-length = 80
@@ -46,7 +51,7 @@ ignore-decorators = ["typing.overload"]
 [tool.ruff.lint.per-file-ignores]
 "**/{tests,docs,tools}/*" = ["ANN001", "ANN201", "D", "E402"]
 "**/__init__.py" = ["D104", "E402"]
-"config.py" = ["ANN003", "N803"]
+"config.py" = ["ANN003", "N802", "N803"]
 
 [tool.pytest]
 addopts = ["--cov-fail-under=80", "--cov-report=json", "--cov=.", "-rf"]
