--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -1,13 +1,15 @@
 [project]
-authors = [{ name = "Blog Platform Team" }]
+authors = [{ name = "Ashlynn Antrobus" }]
 dependencies = [
+    "flask>=3.1.2",
     "psycopg2-binary>=2.9.11",
     "pydantic-settings>=2.12.0",
     "pydantic>=2.12.4",
+    "requests>=2.32.5",
     "sqlmodel>=0.0.27",
 ]
 description = "Blog platform with Flask + React"
-name = "blog"
+name = "markdown-blog"
 requires-python = ">=3.13.5"
 version = "0.1.0"
 
@@ -16,6 +18,7 @@ dev = [
     "mypy>=1.18.2",
     "pytest-cov>=7.0.0",
     "pytest>=9.0.0",
+    "types-requests>=2.32.4.20250913",
 ]
 
 [build-system]
