--- a/biome.json
+++ b/biome.json
@@ -3,11 +3,18 @@
   "vcs": {
     "enabled": true,
     "clientKind": "git",
-    "useIgnoreFile": false
+    "useIgnoreFile": true
   },
   "files": {
-    "ignoreUnknown": false,
-    "includes": ["frontend/src/**/*.{js,jsx}", "frontend/**/*.{js,jsx}"]
+    "ignoreUnknown": true,
+    "includes": ["frontend/src/**/*.{js,jsx,ts,tsx}", "frontend/**/*.{js,jsx,ts,tsx}"]
+  },
+  "assist": {
+    "actions": {
+      "source": {
+        "organizeImports": "on"
+      }
+    }
   },
   "formatter": {
     "enabled": true,
