--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,12 +24,13 @@
     "@types/react": "^19.2.5",
     "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^4.3.4",
+    "@vitest/coverage-v8": "^4.0.9",
     "autoprefixer": "^10.4.20",
     "jsdom": "^25.0.1",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.15",
     "typescript": "^5.9.3",
     "vite": "^5.4.11",
-    "vitest": "^2.1.8"
+    "vitest": "^4.0.9"
   }
 }
