build(frontend): update dependencies and refactor vite/vitest config
- Updated frontend dependencies to their latest versions.
- Corrected Biome configuration to remove redundant include paths.
- Separated Vitest configuration into vitest.config.ts.
- Ensured shared configuration between vite.config.ts and vitest.config.ts using mergeConfig.

--- a/biome.json
+++ b/biome.json
@@ -7,7 +7,7 @@
   },
   "files": {
     "ignoreUnknown": true,
-    "includes": ["frontend/src/**/*.{js,jsx,ts,tsx}", "frontend/**/*.{js,jsx,ts,tsx}"]
+    "includes": ["frontend/**/*.{js,jsx,ts,tsx}"]
   },
   "assist": {
     "actions": {
