--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -10,12 +10,12 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: backend
 
     steps:
       - uses: actions/checkout@v5
-
-      - name: Move into backend dir
-        run: cd backend
 
       - name: "Set up Python"
         uses: actions/setup-python@v6
@@ -32,6 +32,7 @@ jobs:
         with:
           version: "latest"
           github-token: ${{ secrets.CUSTOM_GITHUB_TOKEN }}
+          src: "./backend"
 
       - name: Check formatting with ruff
         run: ruff format --diff .
