fix(ci): set FLASK_ENV=development for backend tests
Backend tests were failing in CI because create_app() raises RuntimeError
in production mode when frontend/dist doesn't exist. Backend CI doesn't
build frontend, so tests failed on import.

Set FLASK_ENV=development in pytest step to bypass production checks and
allow backend tests to run independently without frontend dependencies.

--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -42,3 +42,5 @@ jobs:
 
       - name: Run tests with pytest
         run: uv run pytest --cov --cov-report=xml --cov-fail-under=80
+        env:
+          FLASK_ENV: development
