feat(ci): add workflow_dispatch and workflow path triggers
- Added workflow_dispatch to both CI workflows for manual triggering
- Added workflow file paths to push triggers so CI runs on workflow changes
- Backend CI triggers on .github/workflows/backend-ci.yml changes
- Frontend CI triggers on .github/workflows/frontend-ci.yml changes

--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -4,8 +4,10 @@ on:
   push:
     paths:
       - 'backend/**'
+      - '.github/workflows/backend-ci.yml'
   pull_request:
     branches: [ main ]
+  workflow_dispatch:
 
 jobs:
   test:
