--- a/.github/workflows/frontend-ci.yml
+++ b/.github/workflows/frontend-ci.yml
@@ -4,9 +4,12 @@ on:
   push:
     paths:
       - 'frontend/**'
+      - '.github/workflows/frontend-ci.yml'
 
   pull_request:
     branches: [main]
+
+  workflow_dispatch:
 
 jobs:
   test:
