fix(ci): create frontend build structure for backend tests
SPA routing tests were failing with 404 because index.html didn't exist.
The Path.exists() mock in conftest.py only applied during create_app(),
not during request handling.

Create minimal frontend/dist directory structure with empty index.html
before running tests. This allows SPA route handler to function and
tests to verify routing behavior without requiring full frontend build.

Removed FLASK_ENV=development as it's no longer needed.

--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -42,7 +42,8 @@ jobs:
       - name: Type check with mypy
         run: uv sync && uv run mypy .
 
+      - name: Create frontend build directory structure
+        run: mkdir -p ../frontend/dist && touch ../frontend/dist/index.html
+
       - name: Run tests with pytest
         run: uv run pytest --cov --cov-report=xml --cov-fail-under=80
-        env:
-          FLASK_ENV: development
