--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -1,12 +1,13 @@
+---
 name: Backend CI
 
-on:
+'on':
   push:
     paths:
       - 'backend/**'
       - '.github/workflows/backend-ci.yml'
   pull_request:
-    branches: [ main ]
+    branches: [main]
   workflow_dispatch:
 
 jobs:
@@ -43,7 +44,10 @@ jobs:
         run: uv sync && uv run mypy .
 
       - name: Create frontend build directory structure
-        run: mkdir -p ../frontend/dist && touch ../frontend/dist/index.html
+        run: |
+          mkdir -p ../build/static
+          echo '<html><body><div id="root"></div></body></html>' \
+            > ../build/index.html
 
       - name: Run tests with pytest
         run: uv run pytest --cov --cov-report=xml --cov-fail-under=80
