fix(tests): update tests to match build directory path
- Updated test_app_factory.py to expect build/ instead of frontend/dist

- Use Path(__file__).parents[3] instead of repeated .parent callss

- CI now creates dummy static JS file for static serving tests

--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -45,9 +45,10 @@ jobs:
 
       - name: Create frontend build directory structure
         run: |
-          mkdir -p ../build/static
+          mkdir -p ../build/static/js
           echo '<html><body><div id="root"></div></body></html>' \
             > ../build/index.html
+          echo '/* dummy js file */' > ../build/static/js/main.abc123.js
 
       - name: Run tests with pytest
         run: uv run pytest --cov --cov-report=xml --cov-fail-under=80
