--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -10,9 +10,17 @@ dependencies = [
   "sqlmodel>=0.0.27",
 ]
 description = "Blog platform with Flask + React"
-name = "markdown-blog"
+name = "backend"
 requires-python = ">=3.13.5"
 version = "0.1.0"
+
+[project.scripts]
+create-schema = "scripts.create_schema:main"
+test = "scripts.test:main"
+
+[build-system]
+requires = ["uv_build>=0.9.5,<0.10.0"]
+build-backend = "uv_build"
 
 [dependency-groups]
 dev = [
