fix(doc): fix errors in documentation

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,8 +1,8 @@
-# Database Configuration
-DB_HOST=localhost
-DB_NAME=blogdb
-DB_USER=your_db_user
-DB_PASSWORD=your_db_password
+# Database Configuration (for local development)
+LOCAL_DB_HOST=localhost
+LOCAL_DB_NAME=blogdb
+LOCAL_DB_USER=your_db_user
+LOCAL_DB_PASSWORD=your_db_password
 
 # Flask Configuration
 FLASK_ENV=development
@@ -12,7 +12,6 @@ GITHUB_PERSONAL_ACCESS_TOKEN=your_github_token
 RESEND_API_KEY=your_resend_api_key
 
 # Clerk Authentication
-CLERK_PUBLISHABLE_KEY=your_clerk_publishable_key
 CLERK_SECRET_KEY=your_clerk_secret_key
 CLERK_WEBHOOK_SECRET_KEY=your_clerk_webhook_secret
 
